--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,29 @@
-.App {
-  text-align: center;
+.messages_area {
+  height: 560px;
+  overflow-y: scroll;
+  background-color: #fffcfc;
+  margin-bottom: 10px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.send_button{
+  margin-top: 2px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.message_box {
+  margin: 20px 30px 20px 30px;
+  max-width: 450px;
+  padding: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.message_box_you {
+  background-color: #eff2ef;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.message_box_other {
+  background-color: #badde0;
+  float: right;
+}
+
+.clear {
+  clear: both;
 }
