--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,19 @@
   padding: 10px;
 }
 
+.topName {
+  font-size: 0.7em;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.bottomTime {
+  font-size: 0.7em;
+  font-weight: bold;
+  margin-bottom: 10px;
+  text-align: right;
+}
+
 .message_box_you {
   background-color: #eff2ef;
 }
@@ -24,6 +37,25 @@
   float: right;
 }
 
+.sidebar {
+  margin-top: 10px;
+  padding: 10px;
+}
+
+.login {
+  margin-top: 100px;
+}
+
+/* GENERAL */
+
 .clear {
   clear: both;
+}
+
+.no-padding {
+  padding: 0!important;
+}
+
+.no-margin {
+  margin: 0!important;
 }
